# sonata

./: README.md
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/custom_classes/: data.dart  db_helper.dart
frontend/lib/custom_widgets/: console.dart  custom_appbar.dart  custom_drawer.dart  custom_progress_bar.dart  custom_text.dart  playlist_addition_form.dart  playlist_creation_form.dart  stacked_screen_appbar.dart
frontend/lib/custom_widgets/custom_buttons/: play_pause_button.dart  repeat_button.dart  shuffle_button.dart
frontend/lib/custom_widgets/screens/: album_screen.dart  album_view_screen.dart  artist_screen.dart  artist_view_screen.dart  genre_screen.dart  genre_view_screen.dart  home_screen.dart  playlist_screen.dart  playlist_view_screen.dart  queue_screen.dart  search_screen.dart  settings_screen.dart  song_screen.dart
frontend/lib/custom_widgets/tiles/: album_song_tile.dart  album_tile.dart  artist_tile.dart  drawer_item.dart  playlist_entry_tile.dart  playlist_tile.dart  queue_tile.dart  (+1 more)
frontend/lib/misc/: constants.dart
frontend/linux/: CMakeLists.txt  my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
scanner/: .gitignore  CMakeLists.txt  database_functions.cpp  database_functions.hpp  misc.cpp  misc.hpp  project_dbs_ffi.cpp  project_dbs_ffi.hpp  tag_functions.cpp  tag_functions.hpp
(+4 files in other folders)
